# gigi-lang

./: ._.gitignore  .gitignore  CHANGELOG.md  Justfile  LICENSE  README  README.md  gigi-lang.cabal  gigi-language.cabal
Compiler/: Lexer.hs
compiler/: Codegen.hs  Lexer.hs  Main.hs  Structures.hs
examples/: hello.gigi
source/: interpreter  interpreter.c  parser.hs
src/: Codegen.hs  Compiler.hs  Lexer.hs  Main.hs  Structures.hs  lexer  lexer.c  lexer.h  processor.c  processor.h
src/Compiler/: Lexer.hs
src/parser/: ._tokenizer.hs  Constants.hi  constants.hs  parser.hs  tokenizer.hi  tokenizer.hs
web/: Justfile
