cabal-version:      3.0
name:               gigi-language
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             ellos0
maintainer:         mcgibbonellott@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable gigi-language
    import:           warnings
    main-is:          Main.hs
    other-modules: Lexer, Codegen, Structures
    -- other-extensions:
    build-depends: base >=4, parsec
    hs-source-dirs:   src
    default-language: Haskell2010
