cabal-version:      3.0
name:               gigi-language
version:            0.2.0.0

synopsis: A lisp adjacent functional programming language.
-- description:
license:            MIT
license-file:       LICENSE
author:             ellos0
maintainer:         mcgibbonellott@gmail.com
-- copyright:
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable gigi-language
    import:           warnings
    main-is:          Main.hs
    other-modules: Structures, Lexer, Codegen
    build-depends: base >=4, parsec, text
    hs-source-dirs:   compiler
    default-language: Haskell2010
